# term_Work

./: .gitignore  CMakeLists.txt  README.md  clas.puml  icon_app.qrc
other/: Untitled 1.odt  Untitled Diagram(1).drawio  Untitled Diagram(3).drawio  ascii(1).drawio  ascii.drawio  ascii_last(1).drawio  diagram_clases.drawio  diagram_classes(1).drawio  diagrama_last.drawio  resized(1).drawio  resized.drawio  resized_last(1).drawio
src/: main.cpp
src/ui/customwidget/: customwidget.cpp  customwidget.h  customwidget.ui
src/ui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/secondscreen/: Events.cpp  Events.h  LRUCache.cpp  LRUCache.h  convert.cpp  convert.h  secondscreen.cpp  secondscreen.h  secondscreen.ui
src/ui/secondscreen/custom_graphic/: Events.cpp
src/ui/secondscreen/src_back/data/: bmp_image.cpp  image.cpp  other_image.cpp
src/ui/secondscreen/src_back/data/header/: bmp_header.h  bmp_image.h  image.h  other_image.h  pixel.h  ppm_image.h
src/ui/secondscreen/src_back/data_model/get_bmp_data/: BMPImageProcess.cpp  BMPImageProcess.h
src_back/data/: ppm_image.cpp
src_back/data/header/: pixel.h
src_back/data_model/: convert.cpp  convert.h
